--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-web/build
-web/build-dev
-web/node_modules
-parser/node_modules
-web/package-lock.json
-web/logs
+node_modules
+build-dev
+.vscode
+.DS_Store
+.zip
