--- a/web/package.json
+++ b/web/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "MemarealWeb",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "author": {
+    "name": "Maksim Novoseltsev"
+  },
+  "description": "React app",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --inspect --watch src/server src/server",
-    "start": "cross-env NODE_ENV=production pm2 start build/server --watch",
+    "dev": "cross-env NODE_ENV=development nodemon --watch src/server src/server",
+    "start": "cross-env NODE_ENV=production node build/server",
     "build": "npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack -p --progress --config=config/webpack.config.prod.js",
     "build:server": "copyfiles -a -u 1 src/server/**/**/* build"
   },
-  "postcss": {},
   "dependencies": {
     "@babel/cli": "7.2.3",
     "@babel/core": "7.2.2",
@@ -17,13 +19,10 @@
     "@babel/preset-env": "7.3.1",
     "@babel/preset-react": "7.0.0",
     "@date-io/date-fns": "^1.3.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "@material-ui/core": "^4.7.1",
+    "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.35",
-    "@material-ui/pickers": "^3.2.8",
+    "@material-ui/lab": "^4.0.0-alpha.41",
+    "@material-ui/pickers": "^3.2.10",
     "axios": "^0.19.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
@@ -33,50 +32,40 @@
     "body-parser": "1.18.3",
     "compression": "1.7.3",
     "cookie-parser": "^1.4.4",
-    "copy-webpack-plugin": "^5.1.1",
-    "copyfiles": "^2.3.0",
+    "copyfiles": "^2.1.1",
     "cross-env": "5.2.0",
-    "css-loader": "2.1.0",
-    "date-fns": "^2.0.0-beta.5",
-    "eslint": "^5.14.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-react": "^7.12.4",
-    "excel4node": "^1.7.2",
+    "css-loader": "^2.1.1",
     "express": "4.16.4",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "fast-safe-stringify": "2.0.6",
     "file-loader": "^3.0.1",
+    "fs": "0.0.1-security",
+    "highcharts": "^7.1.2",
+    "highcharts-react-official": "^2.2.2",
     "html-loader": "0.5.5",
     "html-webpack-harddisk-plugin": "1.0.1",
     "html-webpack-plugin": "3.2.0",
-    "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "node": "8.11.1",
-    "node-sass": "^4.14.1",
+    "node-sass": "^4.13.0",
+    "nodemailer": "^6.4.2",
     "nodemon": "^1.19.1",
-    "pg": "^7.12.0",
-    "pg-promise": "^9.1.2",
-    "pm2": "^4.2.0",
+    "pg": "^8.3.0",
+    "pg-promise": "^9.3.6",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "prettier": "1.16.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.0",
-    "react-hot-loader": "^4.12.10",
-    "react-perfect-scrollbar": "^1.5.3",
-    "react-redux": "6.0.0",
-    "react-router-dom": "^4.3.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.12.18",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "^3.4.1",
-    "react-vk": "^5.0.2",
-    "react-youtube": "^7.9.0",
     "redux": "^4.0.4",
-    "redux-logger": "3.0.6",
-    "sanitize.css": "8.0.0",
-    "sass-loader": "7.1.0",
-    "style-loader": "0.23.1",
+    "redux-logger": "^3.0.6",
+    "sanitize.css": "^11.0.0",
+    "sass-loader": "*",
+    "string": "^3.3.3",
+    "style-loader": "^0.23.1",
+    "styled-components": "^5.0.1",
     "uglifyjs-webpack-plugin": "2.1.1",
     "url-loader": "^1.1.2",
     "webpack": "4.29.0",
