--- a/web/package.json
+++ b/web/package.json
@@ -48,6 +48,7 @@
     "node-sass": "^4.13.0",
     "nodemailer": "^6.4.2",
     "nodemon": "^1.19.1",
+    "oozie-api": "^0.1.10",
     "pg": "^8.3.0",
     "pg-promise": "^9.3.6",
     "postcss-loader": "3.0.0",
